<resources>
    <string name="activity_event_titel">Kies een evenement</string>
    <string name="email">E-mail</string>
    <string name="password">Wachtwoord</string>
    <string name="confirm_password">Wachtwoord bevestigen</string>
    <string name="sign_in">Aanmelden</string>
    <string name="kies_evenement">Kies evenement</string>
    <string name="wachtwoord_vergeten">Wachtwoord vergeten?</string>
    <string name="bezig_aanmelden">Bezig met aanmelden…</string>
    <string name="aanmelden_mislukt">Aanmelden mislukt!</string>
    <string name="ongeldig_email">Ongeldig e-mailadres</string>
    <string name="wachtwoord_te_kort">Wachtwoord moet minimum 6 karakters lang zijn</string>
    <string name="fout_onbekend">Onbekende fout, probeer het later opnieuw.</string>
    <string name="even_wachten">Even wachten</string>
    <string name="laden_van_evenementen">Bezig met laden van evenementen…</string>
    <string name="afmelden">Afmelden</string>
    <string name="title_user_list">Users</string>
    <string name="title_user_detail">User Detail</string>
    <string name="laden_leden">Bezig met laden van leden…</string>
    <string name="search_hint">Lid</string>
    <string name="zoek_lid">Zoek naar leden</string>
    <string name="kies_credit_bedrag">Kies het bij te laden bedrag:</string>
    <string name="bedrag_toevoegen">Bedrag toevoegen</string>
    <string name="verkoop">Verkoop</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_5">5</string>
    <string name="_10">10</string>
    <string name="_20">20</string>
    <string name="_50">50</string>
    <string name="_100">100</string>
    <string name="_200">200</string>
    <string name="eigen_bedrag_ingeven">Eigen bedrag ingeven</string>
    <string name="hoe_veel_bijladen">Hoe veel wil je bijladen?</string>
    <string name="invoeren_groot_bedrag">Ben je zeker dat je zo\'n groot bedrag (€ %1$.2f) wilt invoeren?</string>
    <string name="zeker">Zeker?</string>
    <string name="item_verwijderen">item verwijderen</string>
    <string name="_0">0</string>
    <string name="nul_euro">0,00 €</string>
    <string name="afrekenen">Afrekenen</string>
    <string name="bedrag">Totaal:</string>
    <string name="fout_inladen_leden">Fout bij inladen leden, controleer of je verbonden bent met internet.</string>
    <string name="success_opgeladen">%1$.2f euro opgeladen</string>
    <string name="success_afgetrokken">%1$.2f euro afgetrokken</string>
    <string name="ref_rollen">rollen</string>
    <string name="fout_gebruiker_geen_rechten">Deze gebruiker heeft geen toegang tot de app.\nContacteer het bestuur om van deze gebruiker een kassabeheerder te maken.</string>
    <string name="fout_database_verbinding">Fout bij verbinden met database: %s</string>
    <string name="laatste_transacties">Laatste transacties:</string>
    <string name="saldo">Saldo:</string>
    <string name="extra">Extra:</string>
    <string name="dialog_alert_transactie_verwijderen_titel">Transactie ongedaan maken</string>
    <string name="dialog_transactie_ongedaan_maken_bericht">Wil u deze transactie ongedaan maken?</string>
    <string name="toas_fout_undo_transactie_ongedaan_maken">Deze transactie kan niet ongedaan gemaakt worden.</string>
    <string name="saldo_ontoereikend">Saldo ontoereikend</string>
    <string name="ref_transacties_dirty">transacties_dirty</string>
    <string name="ref_totaal">totaal</string>
    <string name="dialog_lopende_repetitie">Repetitie van %1$s gestart op %2$s is nog niet afgesloten.\n\nWil je de verkoop hervatten of de repetitie afsluiten?</string>
    <string name="dialog_title_lopende_repetitie">Reeds lopende repetitie</string>
    <string name="repetitie_hervatten">Repetitie hervatten</string>
    <string name="repetitie_afsluiten">Repetitie afsluiten</string>
</resources>
